--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=Portfolio-Inventory-System
-spring.datasource.url=jdbc:mysql://localhost:3306/inventorydb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=12345678
+
+spring.datasource.url=jdbc:mysql://mysql_database:3306/inventoryDB
+spring.datasource.username=julioramirez
+spring.datasource.password=5849916
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
